--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body> style="backgroud-color: pink:">
   <table cellspacing="20">
     <tr>
-      <td><img src="images/wendie.png.jpg" alt="wendy profile picture"></td>
+      <td><img src="images/wendie.png" alt="wendy profile picture"></td>
       <td><h1>Nails by Wendy Ann</h1> 
         <p><em>Founder and CTO of <strong><a href="#">The App Brewery</a></strong>.</em></p>   
         <p>I am a Nail Technichan and Web Developr. I 💚 nails and web development</p></td>
